Apply material-ui Style

--- a/src/main/styles/loader.less
+++ b/src/main/styles/loader.less
@@ -16,6 +16,6 @@
     content: '';
     width: 128px;
     height: 128px;
-    background: url('../../img/loading.gif') no-repeat;
+    background: url('../img/loading.gif') no-repeat;
   }
 }
