--- a/src/main/styles/style.less
+++ b/src/main/styles/style.less
@@ -1,6 +1,5 @@
 @import (less) "~normalize.css/normalize.css";
-@import "app.less";
-@import "loader.less";
+@import "loader";
 
 @font-face {
   font-family: 'Material Icons';
