--- a/src/template/index.html
+++ b/src/template/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+<!--    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self'; 
+            style-src 'self' https://fonts.googleapis.com;
+            font-src 'self' https://fonts.gstatic.com;"
+    >-->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'; connect-src 'self' ws:" />
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
