--- a/src/template/index.html
+++ b/src/template/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>SPA Template</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="./app.spa.bundle.min.js"></script></body>
+</body>
 </html>
